@@ -22,13 +22,8 @@ repositories {
 	jcenter()
 }
 
-sourceCompatibility = JavaVersion.VERSION_12
-targetCompatibility = JavaVersion.VERSION_12
-
-
-tasks.withType(JavaCompile).each {
-	it.options.compilerArgs.add('--enable-preview')
-}
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 jar{
 	manifest{
@@ -44,7 +39,6 @@ jar{
 
 tasks.test {
 	useJUnitPlatform()
-	jvmArgs("--enable-preview")
 }
 
 dependencies {
